--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       <div class="header_sub"></div>
    </header>
    <div class="container">
-      <div class="advertising">Реклама</div>
-      <div class="add ad-2">Реклама</div>
+      <div class="advertising advertising-1">Реклама</div>
+      <div class="advertising advertising-2">Реклама</div>
 
       <div class="breadcrumbs">
          <a href="#" class="breadcrumbs__link">Главная</a> /
