--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
    <title>ИНЛАЙН</title>
    <link rel="stylesheet" href="css/style.css">
+   <script src="js/main.js" defer></script>
 </head>
 <body>
    <header>
@@ -257,7 +258,6 @@
                   Введен в эксплуатацию в 2013 г. Основу ассортимента составляют порционные и мелкокусковые полуфабрикаты из охлажденной свинины. Продукция мясокомбината является частью вертикально-интегрированного холдинга КоПИТАНИЯФ. 
                   Предприятия холдинга образуют полный цикл производства от выращивания зерна и производства комбикормов до производства свежего мяса, что позволяет снизить себестоимость и гарантировать безопасность и высокое качество продукции.</p>  
                   <span class="company-info__txt-more">Читать всё</span>
-                  <span class="company-info__txt-less">Свернуть</span>
                </div>
                <div class="company-info__txt">
                   <span class="company-info__txt-cap">Виды деятельности:</span>
